[tool.poetry]
name = "staticvar"
version = "0.1.0"
description = "The horrors of C Static variables for Python, with Python."
authors = ["AbdelRahman <abdelrahman.rahal.mail@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/AbdelRahmanRahal/staticvar"
repository = "https://github.com/AbdelRahmanRahal/staticvar"
documentation = "https://github.com/AbdelRahmanRahal/staticvar/blob/main/README.md"
keywords = ["staticvar", "static variable", "static"]
classifiers = [
	"Development Status :: 3 - Alpha",
	"Intended Audience :: Developers",
	"Operating System :: OS Independent",
]


[tool.poetry.dependencies]
python = "^3.10"
stackprinter = ">=0.2.10"


[tool.poetry.dev-dependencies]
pytest = ">=6.2.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"